complete real RAGFlow workflow and UI integration